<resources>
    <string name="app_name">toPdf</string>
    <string name="modifier">modifier</string>
    <string name="edit">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ajouter">Ajouter</string>
    <string name="remove">Remove</string>
    <string name="titre">Titre</string>
    <string name="texte">Texte</string>
    <string name="valider">Valider</string>
    <string name="v">V</string>
    <string name="ajouterplus">+</string>
    <string name="supprimerx">x</string>
    <string name="scannner_codaebare">Scannner CodaeBare</string>
    <string name="g_nerer_codebar">Génerer CodeBar</string>
    <string name="data">Data :</string>
    <string name="upc_a">UPC A</string>
    <string name="code128">Code128</string>
    <string name="codabar">Codabar</string>
    <string name="qrcode">QRCode</string>
    <string name="xx_xx_xx_xx_xx_xx">XX:XX:XX:XX:XX:XX</string>
    <string name="etiquettes">Etiquettes</string>
    <string name="terminer">terminer</string>
    <string name="rechercher">Rechercher</string>
    <string name="statue">Statue</string>
    <string name="etat">Etat</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="longeur_de_l_etiquette">Longeur de l\'etiquette</string>
    <string name="px">px</string>
    <string name="largeur_de_l_etiquette">largeur de l\'etiquette</string>
</resources>