<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BareCode"
    android:orientation="vertical">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="horizontal"
    tools:context=".BareCode">

    <CheckBox
        android:id="@+id/checkBoxQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/qrcode"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/checkBoxCodabar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codabar"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/checkBoxUpc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upc_a"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/checkBoxCode128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code128"
        android:onClick="onCheckBoxClick"/>

</LinearLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/data"
        android:textColor="#000" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_text"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary"
        android:onClick="buttonGenerate"
        android:text="@string/g_nerer_codebar"
        android:textColor="#fff" />

    <ImageView
        android:layout_below="@id/button_generate"
        android:adjustViewBounds="true"
        android:id="@+id/bar_code"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="150dp"/>
    <LinearLayout
        android:layout_marginTop="-50dp"
        android:layout_below="@id/bar_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:text="@string/valider"
            android:id="@+id/validerCodeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonValidate"/>
    </LinearLayout>

</RelativeLayout>

</LinearLayout>