<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/remove"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/supprimerx" />

        <TextView
            android:id="@+id/textout"
            android:background="@drawable/back"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignLeft="@id/separate"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"

            android:text="@string/titre"
            />

        <View
            android:id="@+id/separate"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@color/bluelight"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="150dp"/>

        <TextView
            android:id="@+id/textout2"
            android:background="@drawable/back"
            android:layout_width="158dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp"
            android:layout_toLeftOf="@+id/remove"
            android:layout_alignLeft="@id/separate"

            android:ems="10"
            android:text="@string/texte" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
