
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="100dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Valider parametres"
                    android:onClick="validerparam"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19dp"
                    android:text="@string/longeur_de_l_etiquette" />

                <EditText
                    android:id="@+id/editTextlong"
                    android:layout_width="wrap_content"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvlarg"
                    android:layout_width="wrap_content"
                    android:textSize="19dp"
                    android:textColor="@color/bluelight"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/largeur_de_l_etiquette" />

                <EditText
                    android:id="@+id/editTextlarg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:textSize="19dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Taille du texte" />

                <EditText
                    android:id="@+id/eTextsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:textColor="@color/bluelight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19dp"
                    android:layout_weight="1"
                    android:text="Couleur du texte" />

                <CheckBox
                    android:id="@+id/blackbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Noir" />

                <CheckBox
                    android:id="@+id/bluebox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Bleu" />

                <CheckBox
                    android:id="@+id/redbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Rouge" />
            </LinearLayout>
        </LinearLayout>


